--- a/public/app/templates/home.html
+++ b/public/app/templates/home.html
@@ -1,9 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
     <img class="static-panel" src="/mock/images/home_1.png" />
-    <button class="btn btn-embossed btn-primary btn-hg donate-btn">Donate!</button>
+    <a class="btn btn-embossed btn-primary btn-hg donate-btn"
+      href="/#/user/superwoman123">Donate!</a>
     <img class="static-panel" src="/mock/images/home_2.png" />
-    <button class="btn btn-embossed btn-primary btn-hg donate-btn">Donate!</button>
+    <a class="btn btn-embossed btn-primary btn-hg donate-btn"
+      href="/#/user/superwoman123">Donate!</a>
     <img class="static-panel" src="/mock/images/home_3.png" />
   </div>
 </div>
